--- a/Chronos/src/components/Menu/styles.module.css
+++ b/Chronos/src/components/Menu/styles.module.css
@@ -7,19 +7,6 @@
   margin-top: 5rem;
 }
 
-.icon {
-  text-decoration: none;
-  font-style: none;
-  color: var(--primary);
-  font-size: 4.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 0.2rem;
-  font-weight: bold;
-}
-
 .icon:hover {
   filter: brightness(75%);
   transition-property: filter;
@@ -28,7 +15,7 @@
 }
 
 .div svg {
-  color: var(--gray-900);
+  color: var(--text-over-primary);
   background-color: var(--primary);
   padding: 1.2rem;
   height: 4.8rem;
