--- a/Chronos/src/global.css
+++ b/Chronos/src/global.css
@@ -17,3 +17,12 @@ body {
   background-size: cover;
   color: var(--text-default);
 }
+
+.form {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2.4rem;
+}
