created cycles and button element to react project

--- a/Chronos/src/components/Container/styles.module.css
+++ b/Chronos/src/components/Container/styles.module.css
@@ -7,3 +7,10 @@
   margin: 0 auto;
   color: var(--text-over-primary);
 }
+
+.content section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
