ajusted theme to support the light mode

--- a/Chronos/src/components/ClockTimer/styles.module.css
+++ b/Chronos/src/components/ClockTimer/styles.module.css
@@ -1,6 +1,6 @@
 .div {
   font-size: clamp(6rem, 20dvw, 16rem);
-  color: white;
+  color: var(--gray-100);
   display: flex;
   align-items: center;
   justify-content: center;
