--- a/Chronos/src/components/Footer/styles.module.css
+++ b/Chronos/src/components/Footer/styles.module.css
@@ -10,12 +10,12 @@
 
 .text {
   text-decoration: none;
-  color: var(--text-muted);
+  color: var(--gray-300);
   font-size: 1.2rem;
   margin-top: 1rem;
 }
 
 .text:hover {
   text-decoration: underline;
-  color: var(--text-muted);
+  color: var(--gray-300);
 }
